--- a/distribution/templates/distribution/home.html
+++ b/distribution/templates/distribution/home.html
@@ -25,4 +25,27 @@
     </table>
   </div>
 </div>
+<div class="row">
+  {% for object in object_list %}
+    <div class="col-md-4">
+      <div class="card mb-4 box-shadow">
+        <img class="card-img-top"
+             src="{{ object.image|mediapath }}"
+             alt="Card image cap">
+        <div class="card-body">
+          <h5 class="card-text">{{ object }}</h5>
+          <p class="card-text">{{ object.body|truncatechars:100 }}</p>
+          <p class="card-text">Просмотры: {{ object.views_count }}</p>
+          <p class="card-text">Опубликовано: {{ object.public_date }}</p>
+          <div class="d-flex justify-content-between align-items-center">
+            <div class="btn-group">
+                <a type="button" class="btn btn-sm btn-outline-secondary" href="{% url 'blog:blog_detail' object.pk %}">View</a>
+            </div>
+            <small class="text-muted">9 mins</small>
+          </div>
+        </div>
+      </div>
+    </div>
+  {% endfor %}
+</div>
 {% endblock %}
