--- a/distribution/templates/distribution/includes/inc_distribution_menu.html
+++ b/distribution/templates/distribution/includes/inc_distribution_menu.html
@@ -1,9 +1,9 @@
 <div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom box-shadow">
   <h3 class="my-0 mr-md-auto font-weight-normal">Сервис управления рассылками</h3>
     <nav class="ms-5">
-      <p class="p-2 btn btn-outline-primary">Мои рассылки</p>
-      <p class="p-2 btn btn-outline-primary">Мои клиенты</p>
-      <p class="p-2 btn btn-outline-primary">Блог</p>
+      <a class="p-2 btn btn-outline-primary" href="{% url 'blog:home' %}">Главная</a>
+      <a class="p-2 btn btn-outline-primary" href="{% url 'distribution:distribution_list' %}">Мои рассылки</a>
+      <a class="p-2 btn btn-outline-primary" href="{% url 'distribution:client_list' %}">Мои клиенты</a>
       {% if user.is_authenticated %}
         <a class="p-2 btn btn-outline-primary" href="{% url 'users:logout' %}">Выход</a>
       {% else %}
