--- a/distribution/templates/distribution/distribution_list.html
+++ b/distribution/templates/distribution/distribution_list.html
@@ -8,8 +8,7 @@
 </section>
 <div class="col-12 mb-5">
   <a class="btn btn-outline-primary" href="{% url 'distribution:distribution_form' %}">Добавить рассылку</a>
-  <a class="btn btn-outline-primary" href="{% url 'distribution:distribution_list' %}">Запустить рассылки</a>
-  <a class="btn btn-outline-primary" href="{% url 'distribution:distribution_list' %}">Отчет о рассылках</a>
+  <a class="btn btn-outline-primary" href="{% url 'distribution:logs_list' %}">Отчет о рассылках</a>
 </div>
 <div class="album py-5 bg-light">
   <div class="container">
