--- a/distribution/templates/distribution/home.html
+++ b/distribution/templates/distribution/home.html
@@ -12,15 +12,15 @@
     <table class="table table-striped">
       <tr>
           <td class="w-10">Количество рассылок всего</td>
-          <td>0</td>
+          <td>{{ distribution }}</td>
       </tr>
       <tr>
           <td class="w-10">Количество активных рассылок</td>
-          <td>0</td>
+          <td>{{ distribution_active }}</td>
       </tr>
       <tr>
           <td class="w-10">Количество уникальных клиентов для рассылок</td>
-          <td>0</td>
+          <td>{{ client }}</td>
       </tr>
     </table>
   </div>
